--- a/angular.json
+++ b/angular.json
@@ -87,9 +87,14 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/slick-carousel/slick/slick.css",
+              "node_modules/slick-carousel/slick-theme/slick.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "mode-modules/slick-carousel/slick/slick.min.js"
+            ]
           }
         }
       }
