--- a/angular.json
+++ b/angular.json
@@ -87,9 +87,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/slick-carousel/slick/slick.css",
-              "node_modules/slick-carousel/slick-theme/slick.css"
+              "src/styles.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
