--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jquery": "^3.7.1",
     "ngx-slick-carousel": "^15.0.0",
     "ngx-ui-loader": "^13.0.0",
+    "primeng": "^16.3.1",
     "rxjs": "~7.8.0",
     "slick-carousel": "^1.8.1",
     "tslib": "^2.3.0",
