--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@coreui/angular": "^4.5.16",
+    "bootstrap": "^5.3.1",
     "jquery": "^3.7.1",
     "ngx-slick-carousel": "^15.0.0",
     "ngx-ui-loader": "^13.0.0",
